--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@semantic-release/github": "^5.2.10",
     "@semantic-release/npm": "^5.1.4",
     "@semantic-release/release-notes-generator": "^7.1.4",
+    "@types/fs-extra": "^7.0.0",
+    "@types/lodash": "^4.14.134",
+    "@types/string-similarity": "^3.0.0",
     "all-contributors-cli": "^6.7.0",
     "coveralls": "^3.0.4",
     "jest": "^24.8.0",
