little nits for semantic-release + lint

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kibibibit/stacker",
-  "version": "1.0.0",
+  "name": "@kibibit/stacker",
+  "version": "0.0.0-development",
   "description": "creates a stack for your repository with everything you need for a stack page",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -8,7 +8,16 @@
     "/lib"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "build": "tsc",
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors generate",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "lint:fix": "tslint --project tsconfig.json -c tslint.json --fix src/**/*.ts",
+    "lint": "tslint --project tsconfig.json -c tslint.json src/**/*.ts",
+    "semantic-release": "semantic-release",
+    "start": "node ./lib/announce-it-cli",
+    "test:watch": "jest --watchAll --coverage",
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -51,5 +60,32 @@
     "ts-node": "^8.3.0",
     "tslint": "^5.17.0",
     "typescript": "^3.5.2"
+  },
+  "release": {
+    "branches": [
+      "master",
+      {
+        "name": "next",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/github",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ]
+    ]
+  },
+  "jest-stare": {
+    "resultDir": "test-results/",
+    "coverageLink": "../coverage/index.html"
   }
 }
